# promptry

./: .gitignore  README.md  action.yml  promptry.toml.example  pyproject.toml
.github/workflows/: ci.yml  publish-npm.yml  publish-pypi.yml
dashboard-ui/: index.html  package-lock.json  package.json  vite.config.ts
dashboard-ui/src/: App.tsx  theme.ts
dashboard-ui/src/api/: client.ts  types.ts
dashboard-ui/src/components/: AssertionBar.tsx  ClaimBreakdown.tsx  DiffView.tsx  Layout.tsx  ScoreChart.tsx  Sparkline.tsx
dashboard-ui/src/pages/: Cost.tsx  Models.tsx  Overview.tsx  Playground.tsx  PromptDetail.tsx  Prompts.tsx  RunDetail.tsx  RunDiff.tsx  SuiteDetail.tsx
docs/: CNAME  architecture.html  docs.html  guide.md  index.html  style.css
docs/superpowers/plans/: 2026-03-25-dashboard.md
docs/superpowers/specs/: 2026-03-25-dashboard-design.md
examples/: assertion_pipeline.py  basic_rag.py  llm_judge.py
promptry/: __init__.py  assertions.py  cli.py  comparison.py  config.py  conversation.py  drift.py  evaluator.py  feedback.py  mcp_server.py  model_compare.py  models.py  notifications.py  pricing.py  registry.py  report.py  runner.py  scheduler.py  storage.py  templates.py  writer.py
promptry-js/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
promptry-js/__tests__/: batcher.test.ts  dedup.test.ts  hash.test.ts  promptry.test.ts  storage.test.ts  transport.test.ts
promptry-js/src/: batcher.ts  dedup.ts  env.ts  hash.ts  index.ts  promptry.ts  storage.ts  transport.ts  types.ts
promptry/dashboard/: server.py
promptry/dashboard/static/: index.html
promptry/dashboard/static/assets/: index-DHe7vIQz.js  index-DNtv_rRp.js  index-DPPNX5LF.js  index-Hyuxz6Ih.js  index-d-eNWhgz.js  index-qanp5l9F.js
promptry/integrations/: __init__.py  anthropic.py  litellm.py  openai.py
promptry/storage/: __init__.py  base.py  remote.py  sqlite.py
tests/: conftest.py  test_assertions.py  test_cli.py  test_config.py  test_conversation.py  test_dashboard_api.py  test_datasets.py  test_doctor.py  test_drift.py  test_evaluator.py  test_integrations.py  test_mcp_server.py  test_migrations.py  test_model_compare.py  test_notifications.py  test_pricing.py  test_registry.py  test_remote_storage.py  test_report.py  test_runner.py  test_scheduler.py  test_storage.py  test_templates.py  test_tool_assertions.py  test_votes.py  test_watch.py  test_writer.py
vscode-extension/: README.md  package.json
vscode-extension/src/: extension.ts
