[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptry"
version = "0.6.1"
description = "Regression protection for LLM pipelines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Keshav", email = "keshav@meownikov.xyz"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["llm", "prompts", "regression", "testing", "eval", "drift"]

dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "mcp>=1.0.0",
    "tomli>=1.1.0; python_version < '3.11'",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=2.2.0",
]
dashboard = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]
openai = [
    "openai>=1.0.0",
]
litellm = [
    "litellm>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
promptry = "promptry.cli:main"

[project.urls]
Homepage = "https://promptry.meownikov.xyz"
Repository = "https://github.com/bihanikeshav/promptry"
Issues = "https://github.com/bihanikeshav/promptry/issues"

[tool.setuptools.packages.find]
include = ["promptry*"]

[tool.setuptools.package-data]
"promptry.dashboard" = ["static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that need the embedding model downloaded",
]
